# uv-template

./: .pre-commit-config.yaml  README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: ruff.yaml
